<resources>
    <string name="app_name">Cafeteria DAM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="elige_tus_platos">Elige tus platos:</string>
    <string name="elegir">ELEGIR</string>
    <string name="men">MENÚ</string>
    <string name="todo">TODO</string>
    <string name="primer_plat">PRIMER PLAT</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="segon_plat">SEGON PLAT</string>
    <string name="siguiente2">SIGUIENTE</string>
    <string name="postre">POSTRE</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="volver">volver</string>
    <string name="carret">CARRET</string>
    <string name="textview">TextView</string>
    <string name="primer_plat1">- PRIMER PLAT</string>
    <string name="segon_plat2">- SEGON PLAT</string>
    <string name="postre3">TODO</string>
    <string name="postre_3">- POSTRE</string>
    <string name="about">ABOUT</string>
    <string name="rafael">Rafael</string>
    <string name="romero">Romero</string>
    <string name="_2_dam">2 DAM</string>
    <string name="primer_plato">PRIMER PLATO</string>
    <string name="segundo_plato">SEGUNDO PLATO</string>
    <string name="pedido">PEDIDO</string>
    <string-array name="platosPrimero">
        <item>Macarrones</item>
        <item>Ensalada de queso fresco con tomáte</item>
        <item>Crema de calabacín</item>
        <item>Mejillones a la marinera</item>
    </string-array>
    <string-array name="platosSegundo">
        <item>Lomo adobado con pimientos</item>
        <item>Salmón a la plancha</item>
        <item>Hamburguesa de pollo</item>
        <item>Bistec a la plancha</item>
    </string-array>
    <string-array name="platosPostre">
        <item>Tarta de chocolate</item>
        <item>Helado de vainilla</item>
        <item>Brownie con helado de chocolate</item>
        <item>Fruta del día</item>
    </string-array>
</resources>