<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.carritoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/carrito"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedido"
            android:textColor="#876E23"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.144" />

        <Button
            android:id="@+id/volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#B89665"
            android:text="@string/volver"
            android:textColor="#263238"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.833" />

        <ImageView
            android:id="@+id/imageViewCarrito"
            android:layout_width="101dp"
            android:layout_height="86dp"
            android:contentDescription="@string/postre3"
            android:scaleType="centerInside"
            android:src="@drawable/carrito"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.257" />

        <TextView
            android:id="@+id/textViewPlat1"
            android:layout_width="148dp"
            android:layout_height="50dp"
            android:text="@string/primer_plat1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.483" />

        <TextView
            android:id="@+id/textViewPlat2"
            android:layout_width="148dp"
            android:layout_height="50dp"
            android:text="@string/segon_plat2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.615" />

        <TextView
            android:id="@+id/textViewPostre"
            android:layout_width="148dp"
            android:layout_height="50dp"
            android:text="@string/postre_3"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="140dp"
            android:layout_height="25dp"
            android:text="Primer Plat:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="140dp"
            android:layout_height="25dp"
            android:text="Segon Plat:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.548" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="140dp"
            android:layout_height="25dp"
            android:text="Postre:"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.674" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>